Give the description box an opaque background to ensure readability in all scenes

--- a/style/page.css
+++ b/style/page.css
@@ -164,6 +164,10 @@ span.info {
     top: 5em;
     right: 0px;
     z-index: 2;
+    background-color: #f5f5f5;
+    border: 1px solid #DCDCDC;
+    padding: 1em;
+    border-radius: 5px;
 }
 
 /*.ribbon {*/
